--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,28 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.1.1/css/bootstrap.min.css">
+<style>
+body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.navbar {
+  margin-bottom: 20px;
+}
+p.nav-text.pull-right {
+margin-top: 15px;
+color: #777;
+}
+body {
+font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+font-size: 16px;
+line-height: 1.42857143;
+color: #333;
+background-color: #fff;
+font-weight: 200;
+}
+</style>
 
 </head>
