--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,15 @@
----
-layout: default
----
-<div class="post">
+{% include header.html %}
 
-  <header class="post-header">
-    <h1>{{ page.title }}</h1>
-  </header>
+ <div class="page page{{ page.id | replace:"/","-" }}">
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-1">
 
-  <article class="post-content">
-  {{ content }}
-  </article>
+{% capture title %}## {{ page.title }}{% endcapture %}{{ title | markdownify }}
 
+{{ content }}
+
+    </div>
+  </div>
 </div>
+
+{% include footer.html %}
