--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,28 @@
----
-layout: default
----
-<div class="post">
+{% include header.html %}
 
-  <header class="post-header">
-    <h1>{{ page.title }}</h1>
-    <p class="meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+<div class="row">
+  <div class="col-sm-10 col-sm-offset-1">
 
-  <article class="post-content">
-  {{ content }}
-  </article>
+<article id="post{{ page.id | replace:"/","-" }}" class="post post{{ page.id | replace:"/","-" }}">
 
+  <h2 class="title"><a href="{{ page.url }}">{{ page.title }}</a></h2>
+
+  <div class="post-meta">
+    <span class="entry-date">Posted {{ page.date | date: '%B %d, %Y' }}</span> |
+    <a class="revision-history" href="https://github.com/pnommensen/pnommensen.github.com/commits/master/{{ page.path }}" target="_blank">View revision history</a>
+  </div>
+
+    <div class="entrybody">
+        {{ content }}
+    </div>
+
+    {% unless page.comments == false %}
+      {% include comments.html %}
+    {% endunless %}
+
+</article>
+
+  </div>
 </div>
+
+{% include footer.html %}
