--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
 
   <div class="post-meta">
     <span class="entry-date">Posted {{ page.date | date: '%B %d, %Y' }}</span> |
-    <a class="revision-history" href="https://github.com/pnommensen/pnommensen.github.com/commits/master/{{ page.path }}" target="_blank">View revision history</a>
+    <a class="revision-history" href="https://github.com/pnommensen/pnommensen.github.io/commits/master/{{ page.path }}" target="_blank">View revision history</a>
   </div>
 
     <div class="entrybody">
