--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,11 @@ color: #333;
 background-color: #fff;
 font-weight: 200;
 }
+.post-meta {
+margin: 0 0 20px 0;
+font-style: italic;
+font-size: 0.9em;
+}
 </style>
 
 </head>
