--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,6 +37,16 @@ font-size: 0.9em;
 a.revision-history {
 color: #aaa;
 }
+.posts {
+list-style: none;
+padding-left: 0;
+font-size: 1.1em;
+}
+.posts li .date {
+font-size: 0.8em;
+color: #bbb;
+text-align: right;
+}
 </style>
 
 </head>
