--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -7,6 +7,7 @@
 <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'pnommensen';
+	var disqus_identifier = '{{ page.id }}';
 	var disqus_url = '{{ url_base }}{{ page.url }}';
 	var disqus_title = '{{ page.title | strip_newlines | escape | replace:"'","\'" }}';
 
