--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-fixed-bottom">
+<div class="navbar navbar-default">
     <div class="container">
       <p class="navbar-text pull-left">© 2014 - Patrick Nommensen</p>
       
