--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
 
     <!-- Custom CSS -->
 <link href="{{ url_base }}/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="//cdn.jsdelivr.net/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <style>
 body {
   padding-top: 20px;
