footer twitter margin

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,6 +51,9 @@ font-size: 0.8em;
 color: #bbb;
 text-align: right;
 }
+a.navbar-btn.btn-primary.btn.pull-right {
+margin-right: 30px;
+}
 </style>
 
 </head>
