--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,9 @@ p.nav-text.pull-right {
 margin-top: 15px;
 color: #777;
 }
+.container {
+width: 820px;
+}
 body {
 font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 font-size: 16px;
