--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,16 +12,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://pnommensen.com/">Patrick Nommensen</a>
+           <a class="navbar-brand" href="http://pnommensen.com/"><strong>Patrick Nommensen</strong></a>
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="http://pnommensen.com">Home</a></li>
               <li><a href="http://pnommensen.com/about/">About</a></li>
               <li><a href="http://pnommensen.com/resume/">Resume</a></li>
 	      <li><a href="http://pnommensen.com/contact/">Contact</a></li>
             </ul>
-            <p class="nav-text pull-right">Open Source, Web Optimization, Politics</>
+            <p class="nav-text pull-right">#OpenSource, #WebPerf, #Politics</>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </div>
